// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When fetching multiple entities GET /books when all of the entities are published should fetch multiple entities of type book 1`] = `
Array [
  Object {
    "author": "John Doeburg",
    "id": "23",
    "publicationDate": "2002",
    "subtitle": "The wolf's revenge",
    "title": "Three Little Pigs",
  },
  Object {
    "author": "Jane Donnaldson",
    "id": "24",
    "publicationDate": "2011",
    "title": "An Adventure Story",
  },
]
`;

exports[`When fetching multiple entities GET /books when some of the entities are unpublished should return the expected number of results 1`] = `
Array [
  Object {
    "author": "John Doeburg",
    "id": "23",
    "publicationDate": "2002",
    "subtitle": "The wolf's revenge",
    "title": "Three Little Pigs",
  },
  Object {
    "author": "Jane Donnaldson",
    "id": "24",
    "publicationDate": "2011",
    "title": "An Adventure Story",
  },
]
`;

exports[`When fetching multiple entities GET /photographs when all of the entities are published should fetch multiple entities of type photograph 1`] = `
Array [
  Object {
    "id": "0",
    "imageURL": "https://www.myaudio.com:5555/media?id=cat.png.png",
    "photographer": "Susie McRealart",
  },
  Object {
    "id": "1",
    "imageURL": "https://www.myaudio.com:5555/media?id=dog.png.png",
    "photographer": "Robert McRealart",
  },
]
`;

exports[`When fetching multiple entities GET /photographs when some of the entities are unpublished should return the expected number of results 1`] = `
Array [
  Object {
    "id": "0",
    "imageURL": "https://www.myaudio.com:5555/media?id=cat.png.png",
    "photographer": "Susie McRealart",
  },
  Object {
    "id": "1",
    "imageURL": "https://www.myaudio.com:5555/media?id=dog.png.png",
    "photographer": "Robert McRealart",
  },
]
`;

exports[`When fetching multiple entities GET /terms when all of the entities are published should fetch multiple entities of type term 1`] = `
Array [
  Object {
    "contributor": "",
    "id": "1",
    "term": "Chil-term-1",
    "termEnglish": "Engl-term-1",
  },
  Object {
    "contributor": "",
    "id": "2",
    "term": "Chil-term-2",
    "termEnglish": "Engl-term-2",
  },
  Object {
    "contributor": "",
    "id": "3",
    "term": "Chil-term-no-english",
  },
]
`;

exports[`When fetching multiple entities GET /terms when some of the entities are unpublished should return the expected number of results 1`] = `
Array [
  Object {
    "contributor": "",
    "id": "1",
    "term": "Chil-term-1",
    "termEnglish": "Engl-term-1",
  },
  Object {
    "contributor": "",
    "id": "2",
    "term": "Chil-term-2",
    "termEnglish": "Engl-term-2",
  },
  Object {
    "contributor": "",
    "id": "3",
    "term": "Chil-term-no-english",
  },
]
`;

exports[`When fetching multiple entities GET /transcribedAudioItems when all of the entities are published should fetch multiple entities of type audioWithTranscript 1`] = `
Array [
  Object {
    "audioURL": "https://www.myaudio.com:5555/media?id=123.mp3.mp3",
    "id": "110",
    "length": 20000,
    "plainText": "
[12000] There once was a little wooden boy. [15550]
[18300] His name was Pinocchio. [19240]",
    "start": 0,
  },
]
`;

exports[`When fetching multiple entities GET /transcribedAudioItems when some of the entities are unpublished should return the expected number of results 1`] = `
Array [
  Object {
    "audioURL": "https://www.myaudio.com:5555/media?id=123.mp3.mp3",
    "id": "110",
    "length": 20000,
    "plainText": "
[12000] There once was a little wooden boy. [15550]
[18300] His name was Pinocchio. [19240]",
    "start": 0,
  },
]
`;

exports[`When fetching multiple entities GET /vocabularyLists when all of the entities are published should fetch multiple entities of type vocabularyList 1`] = `
Array [
  Object {
    "entries": Array [
      Object {
        "term": Object {
          "contributor": "",
          "id": "1",
          "term": "Chil-term-1",
          "termEnglish": "Engl-term-1",
        },
        "variableValues": Object {
          "person": "11",
        },
      },
      Object {
        "term": Object {
          "contributor": "",
          "id": "2",
          "term": "Chil-term-2",
          "termEnglish": "Engl-term-2",
        },
        "variableValues": Object {
          "person": "21",
        },
      },
    ],
    "id": "vocabulary-list-id-1",
    "name": "test VL 1 chil",
    "nameEnglish": "test VL 1 engl",
    "variables": Array [
      Object {
        "name": "person",
        "type": "dropbox",
        "validValues": Array [
          Object {
            "display": "I",
            "value": "11",
          },
          Object {
            "display": "We",
            "value": "21",
          },
        ],
      },
    ],
  },
  Object {
    "entries": Array [
      Object {
        "term": Object {
          "contributor": "",
          "id": "2",
          "term": "Chil-term-2",
          "termEnglish": "Engl-term-2",
        },
        "variableValues": Object {
          "person": "23",
        },
      },
    ],
    "id": "vocabulary-list-id-2",
    "name": "test VL 2 CHIL- no engl name",
    "variables": Array [],
  },
]
`;

exports[`When fetching multiple entities GET /vocabularyLists when some of the entities are unpublished should return the expected number of results 1`] = `
Array [
  Object {
    "entries": Array [],
    "id": "vocabulary-list-id-1",
    "name": "test VL 1 chil",
    "nameEnglish": "test VL 1 engl",
    "variables": Array [
      Object {
        "name": "person",
        "type": "dropbox",
        "validValues": Array [
          Object {
            "display": "I",
            "value": "11",
          },
          Object {
            "display": "We",
            "value": "21",
          },
        ],
      },
    ],
  },
  Object {
    "entries": Array [],
    "id": "vocabulary-list-id-2",
    "name": "test VL 2 CHIL- no engl name",
    "variables": Array [],
  },
]
`;
